Modify for customer and manager separately for admin and customer authentication